Fixed a boo boo

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL= "postgresql://neondb_owner:npg_Xtfxa9jQZqe6@ep-falling-shape-a4dcxz5t-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require"
 PORT=8000
+REFRESH_SECRET=xqm2qsp2dGlyWsoICMz4PhEB33PJhRpnZ2GUUFyGkR0=
+JWT_SECRET=+sL8c/anN/pbTn9tOexDE4AfaipHBwwdyVokeERASnU=
